# cleverprogrammer

./: .replit  calender.py  clever.py  datetime.py  pyproject.toml  zip.py
webscrapping/: 7-Day Forecast for Latitude 34.05°N and Longitude 118.25°W (Elev. 377 ft).html  weather.csv  webscraping.py
webscrapping/7-Day Forecast for Latitude 34.05°N and Longitude 118.25°W (Elev. 377 ft)_files/: 1.txt  DualImage(1).php  DualImage.php  sh.f48a1a04fe8dbf021b4cda1d.html
