[tool.poetry]
name = "repl_python3_cleverprogrammer"
version = "0.1.0"
description = ""
authors = ["MukiibiJ <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
daytime = "^0.4"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
